--- a/css/styles.css
+++ b/css/styles.css
@@ -161,6 +161,58 @@ nav ul li {
   color: #ffffff;
 }
 
+.backdrop {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background-color: hsla(0, 0%, 0%, 0.2);
+  position: fixed;
+  top: 0;
+  left: 0;
+
+  width: 100vw;
+  height: 100vh;
+  opacity: 1;
+  transition: opacity .2s cubic-bezier(0.4, 0, 0.2, 1);
+  z-index: 1;
+}
+
+.backdrop.is-hidden {
+
+  pointer-events: none;
+  opacity: 0;
+}
+
+.modal-form {
+  background-color: #FFFFFF;
+  ;
+  width: 528px;
+  height: 581px;
+  opacity: 1;
+  transition: transform cubic-bezier(0.4, 0, 0.2, 1) .4s;
+  opacity: transform cubic-bezier(0.4, 0, 0.2, 1) .1s;
+  transform: translateY(0);
+}
+
+.modal-form.is-hidden {
+  transform: translateY(200px);
+  opacity: 0;
+}
+
+.close-button {
+  box-sizing: border-box;
+  position: absolute;
+  top: 10px;
+  right: 10px;
+  background-color: transparent;
+  border: none;
+  font-size: 16px;
+  cursor: pointer;
+  background: #FFFFFF;
+  border: 1px solid rgba(0, 0, 0, 0.1);
+  border-radius: 50%;
+}
+
 /* beneficios seccion */
 
 .benefits-container {
@@ -485,50 +537,3 @@ address {
   overflow: hidden;
 }
 
-.backdrop {
-  display: flex;
-    align-items: center;
-    justify-content: center;
-background-color: hsla(0, 0%, 0%, 0.2);
-position: fixed;
-top: 0;
-left: 0;
-
-width: 100vw;
-height: 100vh;
-opacity: 1;
-transition: opacity .2s cubic-bezier(0.4, 0, 0.2, 1);
-}
-.backdrop.is-hidden {
-
-  pointer-events: none;
-  opacity: 0;
-}
-
-.modal-form {
-  background-color: #FFFFFF;;
-  width: 528px;
-  height: 581px;
-  opacity: 1;
-  transition: transform cubic-bezier(0.4, 0, 0.2, 1) .4s;
-  opacity: transform cubic-bezier(0.4, 0, 0.2, 1) .1s;
-  transform: translateY(0);
-}
-.modal-form.is-hidden {
-  transform: translateY(200px);
-  opacity: 0;
-}
-
-.close-button {
-  box-sizing: border-box;
-  position: absolute;
-  top: 10px;
-  right: 10px;
-  background-color: transparent;
-  border: none;
-  font-size: 16px;
-  cursor: pointer;
-  background: #FFFFFF;
-    border: 1px solid rgba(0, 0, 0, 0.1);
-    border-radius: 50%;
-}
